--- a/index.html
+++ b/index.html
@@ -5,52 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>bdtechnologies demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/journal/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">  </head>
-    <link rel="stylesheet" href="assets/style.css">  </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+</head>
+<link rel="stylesheet" href="assets/style.css">
+</head>
 
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-custom">  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Dating App</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="?page=home"><i class="bi bi-house-door"></i> Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="?page=profile"><i class="bi bi-person"></i> Profile</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="?page=favourites"><i class="bi bi-heart"></i> Favourites</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="?page=matches"><i class="bi bi-chat-dots"></i> My Matches</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="?page=mailbox"><i class="bi bi-envelope"></i> Mailbox</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="?page=credits"><i class="bi bi-coin"></i> Buy Credits</a>
-            </li>
-            <li class="nav-item">
-            <div class="dropdown">
-                <button class="btn btn-light dropdown-toggle" type="button" id="themeSwitcher" data-bs-toggle="dropdown">
-                    <i class="bi bi-sunglasses"></i>
+<nav class="navbar navbar-expand-lg navbar-custom">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Dating App</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="?page=home"><i class="bi bi-house-door"></i>
+                        Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?page=profile"><i class="bi bi-person"></i> Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?page=favourites"><i class="bi bi-heart"></i> Favourites</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?page=matches"><i class="bi bi-chat-dots"></i> My Matches</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?page=mailbox"><i class="bi bi-envelope"></i> Mailbox</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="?page=credits"><i class="bi bi-coin"></i> Buy Credits</a>
+                </li>
+                <li class="nav-item">
+                    <div class="dropdown">
+                        <button class="btn btn-light dropdown-toggle" type="button" id="themeSwitcher"
+                                data-bs-toggle="dropdown">
+                            <i class="bi bi-sunglasses"></i>
 
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#" data-theme="light">Light </a></li>
-                    <li><a class="dropdown-item" href="#" data-theme="dark">Dark </a></li>
-                </ul>
-            </div>
-            </li>
-        </ul>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#" data-theme="light">Light </a></li>
+                            <li><a class="dropdown-item" href="#" data-theme="dark">Dark </a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
-</div>
 </nav>
 
 <header class="header d-flex align-items-center">
@@ -101,8 +107,8 @@
 </div>
 
 <div class="container">
-<h2>All profiles</h2>
-<div id="container" class="m-2"></div>
+    <h2>All profiles</h2>
+    <div id="container" class="m-2"></div>
 </div>
 
 <div class="modal fade" id="messageModal" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
@@ -120,14 +126,16 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script>
     if (!window.jQuery) {
         //just because you can never trust cdns especially in countries where internet is not as fast as in europe...
         //now, that I got your attention, I don't see the point on using jquery for this small project
         //but, because I do know how to use "modern" frameworks... I did use it in profile.js
-       //I am not a weirdo:P
+        //I am not a weirdo:P
 
         document.write('<script src="assets/js/jquery.min.js"><\/script>');
     }
